--- a/Matikka_SV/matikkaSV.html
+++ b/Matikka_SV/matikkaSV.html
@@ -64,7 +64,7 @@
         <div class="col-md-6  mb-5 text-center">Kysymys 2 <br> <span id="eka2">H</span> - <span id="toka2">L</span> =
             <label for="input"><input id="vastaus2" name="vastaus2" type="value"></label>
         </div>
-        <div class="col-md-6  mb-5 text-center">Kysymys 3 <br>  <span id="eka3">H</span> / <span id="toka3">L</span> =
+        <div class="col-md-6  mb-5 text-center">Kysymys 3 <br>  <span id="eka3">H</span> - <span id="toka3">L</span> =
             <label for="input"><input id="vastaus3" name="vastaus3" type="value"></label>
         </div>
         <div class="col-md-6  mb-5 text-center">Kysymys 4 <br> <span id="eka4">H</span> * <span id="toka4">L</span> =
@@ -73,11 +73,11 @@
         <div class="col-md-6  mb-5 text-center">Kysymys 5 <br> <span id="eka5">H</span> + <span id="toka5">L</span> =
             <label for="input"><input id="vastaus5" name="vastaus5" type="value"></label>
         </div>    
-        <div class="col-md-6  mb-5 text-center">Kysymys 6 <br> <span id="eka6">H</span> + <span id="toka6"> / </span> / <span id="toka7">L</span> =
+        <div class="col-md-6  mb-5 text-center">Kysymys 6 <br> <span id="eka6">H</span> + <span id="toka6"> / </span> + <span id="toka7">L</span> =
             <label for="input"><input id="vastaus6" name="vastaus6" type="value"></label>
         </div>                
       </div>
-      <div class="vastausten-tarkistus text-center border">
+      <div class="vastausten-tarkistus text-center d-none">
         <span id="vastaukset py-3 mb-5">Katsotaan miten meni!</span>
 
       </div>
