--- a/Matikka_SV/matikkaSV.html
+++ b/Matikka_SV/matikkaSV.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="sv.css">
     
     <!--Font Awesome-->
-    <script src="https://kit.fontawesome.com/5fd3e95cfd.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/5fd3e95cfd.js" crossorigin="anonymous"></script> -->
     
-    <title>Tietovisaseikkailu neljäsluokkalaisille</title>
+    <title>Matikkavisa 2</title>
   </head>
   <body class="d-flex flex-column min-vh-100">
      <!-- Header  -->
@@ -54,7 +54,7 @@
     <div class="container border bg-grey bg-light">
       <div class="row">
         <div class="col">
-          <h1 class="mb-5 fonttivaihtoon text-center">Matikkavisa #2</h1>
+          <h1 class="mb-5 fonttivaihtoon text-center py-2"><i class="fa-solid fa-xmark"></i> Matikkavisa #2 <i class="fa-solid fa-plus-minus"></i></h1>
         </div>
       </div>
       <div class="row mb-5">
@@ -78,20 +78,24 @@
         </div>                
       </div>
       <div class="vastausten-tarkistus text-center">
-        <span id="vastaukset py-3 mb-5"></span>
+        <span id="tervehdys"></span>
+        <span id="palkinto1" ><img src="../Images/diamond.png" hidden alt="" name="palkinto1" srcset=""></span>
+        <span id="palkinto2" ><img src="../Images/coins.png" hidden alt="" name="palkinto2"srcset=""></span>
+        <span id="palkinto3" ><img src="../Images/chest.png" hidden alt="" name="palkinto3"srcset=""></span>
+        <span class="korjaus" id="vastaukset py-3 mb-5"></span>
 
       </div>
       <div class="row">
       <div class="palkinto py-1">
           <button class="col-md-12" id="tarkista" onclick="tarkistaVastaukset()"><strong>Tarkista Vastaukset</strong></button>
-          <button class="col-md-12" id="tarkista" onclick="arvoUudet()">Arvo uudet kysymykset</button>
+          <button class="col-md-12 rysa" hidden id="tarkista" onclick="arvoUudet()">Arvo uudet kysymykset</button>
       </div>
     </div>
     </div>
     <footer class="footer text-center border border-dark border-5 mt-auto">
       <div class="container">
         <div class="row">
-        <span>@2022 Milla Tuppurainen, Sami Vauhkonen, Jante Wallin</span>
+        <span>@Sami Vauhkonen</span>
       </div>
       </div>
     </footer>
@@ -100,5 +104,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1ffa00a0e1.js" crossorigin="anonymous"></script>
   </body>
 </html>
