--- a/Matikka_SV/matikkaSV.html
+++ b/Matikka_SV/matikkaSV.html
@@ -87,7 +87,7 @@
       </div>
       <div class="row">
       <div class="palkinto py-1">
-          <button class="col-md-12" id="tarkista" onclick="tarkistaVastaukset()"><strong>Tarkista Vastaukset</strong></button>
+          <button class="col-md-12" id="tarkista" onclick="tarkistaVastaukset()"><strong>Tarkista vastaukset</strong></button>
           <button class="col-md-12 rysa" hidden id="tarkista" onclick="arvoUudet()">Arvo uudet kysymykset</button>
       </div>
     </div>
